--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,11 +1,11 @@
 <h1 class="text-3xl font-bold text-center mb-8">Tasks List</h1>
 
-<div>
-  <div>
+<div class="max-w-5xl mx-auto">
+  <div class="grid grid-cols-3 gap-6">
     <% @tasks.each do |task| %>
-      <div>
-        <h2><%= task.title %></h2>
-        <%= image_tag task.thumb_image %>
+      <div class="task-item bg-white p-4 shadow-md rounded-lg border border-gray-200 hover:shadow-lg transition duration-200 ease-in-out cursor-pointer">
+        <h2 class="font-bold text-lg mb-2"><%= task.title %></h2>
+        <img src="<%= task.thumb_image %>" alt="<%= task.title %>" class="rounded-lg">
       </div>
     <% end %>
   </div>
