--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,15 @@
 <h1 class="text-3xl font-bold text-center mb-8">Tasks List</h1>
 
 <div class="max-w-5xl mx-auto">
-  <div class="grid grid-cols-3 gap-6">
-    <% @tasks.each do |task| %>
-      <div class="task-item bg-white p-4 shadow-md rounded-lg border border-gray-200 hover:shadow-lg transition duration-200 ease-in-out cursor-pointer">
-        <h2 class="font-bold text-lg mb-2"><%= task.title %></h2>
-        <img src="<%= task.thumb_image %>" alt="<%= task.title %>" class="rounded-lg">
+  <div id="task-list" data-controller="tasks" data-tasks-sort-url="<%= sort_tasks_path %>" class="sortable-list grid grid-cols-3 gap-6">
+  <% @tasks.each do |task| %>
+    <div data-id="<%= task.id %>" class="task-item bg-white p-4 shadow-md rounded-lg border border-gray-200 hover:shadow-lg transition duration-200 ease-in-out cursor-pointer">
+      <!-- Updated image styling -->
+      <div class="rounded-t-lg overflow-hidden">
+        <img src="<%= task.thumb_image %>" alt="<%= task.title %>" class="w-full h-40 object-cover">
       </div>
-    <% end %>
-  </div>
+      <h2 class="font-bold text-lg mt-2"><%= task.title %></h2>
+    </div>
+  <% end %>
+</div>
 </div>
