Adds styling to Auction index and show pages with TailwindCSS

--- a/app/views/auctions/index.html.erb
+++ b/app/views/auctions/index.html.erb
@@ -1,9 +1,26 @@
-<h1>Auctions</h1>
-<ul>
-  <% @auctions.each do |auction| %>
-    <li>
-      <%= link_to auction.title, auction_path(auction) %>
-      <p><%= auction.description %></p>
-    </li>
-  <% end %>
-</ul>
+<div class="container mx-auto p-8">
+  <h1 class="text-4xl font-bold mb-6 text-center">Auctions</h1>
+  <!-- Create a grid with 3 columns on medium screens and larger -->
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+    <% @auctions.each do |auction| %>
+      <div class="bg-white shadow-md rounded-lg p-4 h-full">
+        <!-- Auction title, centered and bold -->
+        <div class="text-center">
+          <h2 class="text-xl font-bold"><%= link_to auction.title, auction_path(auction) %></h2>
+        </div>
+
+        <!-- Auction description -->
+        <div class="mt-2 flex-grow">
+          <p class="text-gray-600"><%= auction.description %></p>
+        </div>
+
+        <!-- Footer with starting price and current price  -->
+        <div class="items-center mt-3 border-t pt-4">
+          <hr />
+          <p>Starting Price: $<%= auction.starting_price %></p>
+          <p>Current Bid: $<%= auction.current_price %></p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
