--- a/app/views/auctions/show.html.erb
+++ b/app/views/auctions/show.html.erb
@@ -6,18 +6,19 @@
   <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
     <!-- Auction Details -->
     <div class="bg-white shadow-md rounded-lg p-6">
-      <h2 class="text-2xl font-bold mb-4"><%= @auction.title %></h2>
       <p class="text-gray-700 mb-4"><%= @auction.description %></p>
-      <p class="text-gray-500 text-sm mb-2">Starting Price: <%= number_to_currency(@auction.starting_price, precision: 2) %></p>
-      <p class="text-gray-500 text-sm">Current Price: <%= number_to_currency(@auction.current_price, precision: 2) %></p>
+      <p class="text-gray-500 text-sm mb-2">Starting Price: <span class="font-bold"><%= number_to_currency(@auction.starting_price, precision: 2) %></span></p>
+      <p class="text-gray-500 text-sm">Current Price: <span class="font-bold"><%= number_to_currency(@auction.current_price, precision: 2) %></span></p>
     </div>
 
     <!-- All Bids -->
-    <div id="bids-container" data-controller="auction-channel" data-auction-id="<%= @auction.id %>"  data-auction-channel-target="bids" class="bg-white shadow-md rounded-lg p-6">
-      <h3 class="text-xl font-bold mb-4">Bids</h3>
-      <% @bids.each do |bid| %>
-        <%= render 'bids/bid', bid: bid %>
-      <% end %>
+    <div class="bg-white shadow-md rounded-lg p-6">
+      <h2 class="text-3xl font-bold mb-4">Bids</h3> <br />
+      <div id="bids-container" data-controller="auction-channel" data-auction-id="<%= @auction.id %>"  data-auction-channel-target="bids">
+        <% @bids.each do |bid| %>
+          <%= render 'bids/bid', bid: bid %>
+        <% end %>
+      </div>
     </div>
     
    <!-- Bid Form -->
